# miniflux-cli

./: .gitignore  Makefile  README.md  README.zh.md  pyproject.toml
docker/: docker-compose.yaml
docs/: api.md  cli.md  configuration.md  howto.md  keyboard_shortcuts.md  miniflux-cli-usage.md  rules.md  ui.md
scripts/: e2e.sh  full_test.sh
src/miniflux_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  formatting.py
src/miniflux_cli/commands/: apikeys.py  categories.py  entries.py  feeds.py  opml.py  system.py  users.py
tests/: conftest.py  test_client_wrapper.py  test_config.py
tests/test_commands/: test_entries.py  test_feeds.py  test_system.py
